Add Twitter share button after game over

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
           <p><span class="tag">Score</span><span id="score">0</span></p>
           <p><span class="tag">Record</span><span id="best">0</span></p>
         </div>
-        <button id="start">Démarrer</button>
+        <div class="actions">
+          <button id="start">Démarrer</button>
+          <button id="share" type="button">Partager mon score</button>
+        </div>
         <p class="hint">Espace • Clique • Toucher = battement d'ailes</p>
       </section>
     </main>
