Add share flow, boot animation, and audio polish

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,16 +11,16 @@
       <canvas id="game"></canvas>
       <section class="ui">
         <h1>Flappy Dopamine</h1>
-        <p class="subtitle">Tape ou clique pour planer dans les vibes psychédéliques.</p>
+        <p class="subtitle">Tap or click to glide through the psychedelic vibes.</p>
         <div class="info">
           <p><span class="tag">Score</span><span id="score">0</span></p>
           <p><span class="tag">Record</span><span id="best">0</span></p>
         </div>
         <div class="actions">
-          <button id="start">Démarrer</button>
-          <button id="share" type="button">Partager mon score</button>
+          <button id="start">Start</button>
+          <button id="share" type="button">Share my score</button>
         </div>
-        <p class="hint">Espace • Clique • Toucher = battement d'ailes</p>
+        <p class="hint">Space • Click • Tap = flap</p>
       </section>
     </main>
     <script src="script.js"></script>
