Affiche un message scintillant au démarrage

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p class="hint">Espace • Clique • Toucher = battement d'ailes</p>
       </section>
     </main>
+    <div id="start-message" class="sparkle-message" aria-live="polite">Let’s go Thibaut !</div>
     <script src="script.js"></script>
   </body>
 </html>
