Resolve merge conflicts and add start message

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <p class="hint">Space • Click • Tap = flap</p>
       </section>
     </main>
+    <div id="start-message" class="sparkle-message" aria-live="polite">Let’s go Thibaut !</div>
     <script src="script.js"></script>
   </body>
 </html>
