--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <main class="wrapper">
-      <canvas id="game"></canvas>
+      <div class="game-area">
+        <canvas id="game"></canvas>
+        <div id="theme-label" class="theme-label" aria-live="polite"></div>
+      </div>
       <section class="ui">
         <h1>Flappy Dopamine</h1>
         <p class="subtitle">Tap or click to glide through the psychedelic vibes.</p>
